--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,21 @@
 .App {
   text-align: center;
+  font-family: 'Lato', sans-serif;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.logo {
+  height: 40px;
+  width: 40px;
+  margin-right: 10px;
+  background-color: #fbde67;
+  border-radius: 50%;
+  display: inline-block;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+.serif {
+  font-family: 'Noto Serif JP', serif;
 }
 
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.sans {
+  font-family: 'Lato', sans-serif;
 }
