--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
 .App {
-  text-align: center;
   font-family: 'Lato', sans-serif;
 }
 
@@ -12,6 +11,10 @@
   display: inline-block;
 }
 
+.yellow-bg {
+  background-color: #fbde67;
+}
+
 .serif {
   font-family: 'Noto Serif JP', serif;
 }
@@ -19,3 +22,4 @@
 .sans {
   font-family: 'Lato', sans-serif;
 }
+
