--- a/src/App.css
+++ b/src/App.css
@@ -24,3 +24,11 @@
   font-family: 'Lato', sans-serif;
 }
 
+.forbidden {
+  cursor: not-allowed;
+}
+
+.user-select-none {
+  user-select: none;
+}
+
