--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   color: #4e5661;
   box-sizing: border-box;
 }
@@ -13,7 +13,8 @@ a:visited {
   color: inherit;
 }
 
-input, textarea {
+input,
+textarea {
   width: 100%;
   padding: 12px;
   box-sizing: border-box;
@@ -35,12 +36,6 @@ select {
   background-position: right;
 }
 
-@media only screen and (min-width: 600px) {
-  #hero {
-    height: 400px;
-    background-size: cover;
-  }
-}
 @media only screen and (min-width: 800px) {
   #hero {
     height: 500px;
@@ -52,13 +47,13 @@ select {
   height: 40px;
   width: 40px;
   margin-right: 10px;
-  background-color: #FCDF5C;
+  background-color: #fcdf5c;
   border-radius: 50%;
   display: inline-block;
 }
 
 .nav {
-  box-shadow: 0 2px 4px 0 rgba(50,50,93,.1);
+  box-shadow: 0 2px 4px 0 rgba(50, 50, 93, 0.1);
 }
 
 .f7 {
@@ -66,19 +61,19 @@ select {
 }
 
 .yellow-bg {
-  background-color: #FCDF5C;
+  background-color: #fcdf5c;
 }
 
 .light-yellow-bg {
-  background-color: #FEFBEE;
+  background-color: #fefbee;
 }
 
 .serif {
-  font-family: 'Domine', serif;
+  font-family: "Domine", serif;
 }
 
 .sans {
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
 }
 
 .forbidden {
@@ -95,6 +90,7 @@ select {
 
 .sticky {
   position: sticky;
+  z-index: 1000;
   top: 62px;
 }
 
@@ -103,12 +99,12 @@ select {
 }
 
 .rangeslider-horizontal .rangeslider__fill {
-  background-color: #FCDF5C !important;
+  background-color: #fcdf5c !important;
 }
 
 .product-grid {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr;
   /* grid-template-rows: 100px 100px; */
   grid-column-gap: 10px;
   grid-row-gap: 50px;
@@ -121,9 +117,83 @@ select {
 
 .product-container {
   display: flex;
+  position: relative;
   justify-content: center;
   align-items: center;
   width: 300px;
   height: 300px;
-  border: 10px solid #F8F8F8;
+  border: 10px solid #f8f8f8;
+  transition: all 0.2s ease;
+}
+
+.from-40 {
+  background-color: #fcdf5c;
+  position: absolute;
+  padding: 15px;
+  border-top-left-radius: 15px;
+  font-weight: 700;
+  bottom: 0;
+  right: 0;
+}
+
+.product-container:hover {
+  border-color: #fcdf5c;
+}
+
+.ghost {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  /* transition: all 0.2s ease; */
+}
+
+.ghost:hover {
+  background-color: rgb(251, 250, 200);
+  opacity: 0.7;
+  height: 100%;
+}
+
+.ghost:hover::before {
+  content: "+";
+  display: flex;
+  font-weight: 700;
+  font-size: 18px;
+  justify-content: center;
+  align-items: center;
+  vertical-align: middle;
+  position: absolute;
+  margin-left: -25px;
+  margin-top: -25px;
+  left: 50%;
+  top: 50%;
+  border-radius: 50%;
+  background-color: white;
+  height: 50px;
+  width: 50px;
+
+  /* content: "Pseudo child text";
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  border: 1px solid red;
+  display:flex;
+  flex-direction:row;
+  align-items: center;
+  justify-content: center; */
+}
+
+@media only screen and (min-width: 600px) {
+  #hero {
+    height: 400px;
+    background-size: cover;
+  }
+
+  .product-grid {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+
+@media only screen and (min-width: 480px) {
 }
