Work on product modal

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+body {
   font-family: "Lato", sans-serif;
   color: #4e5661;
   box-sizing: border-box;
@@ -100,6 +100,12 @@ select {
 
 .rangeslider-horizontal .rangeslider__fill {
   background-color: #fcdf5c !important;
+}
+
+.slider-container {
+  max-width: 200px;
+  display: inline-block;
+  flex-grow: 1;
 }
 
 .product-grid {
